<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/LinearLayoutBackground"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<ImageView
		android:id="@+id/ImageViewHeader"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="10dp"
		android:contentDescription="@string/app_name" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/textNumeroSelecionados"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/textNumerosSelecionados" />

		<EditText
			android:id="@+id/edtNumerosSelecionados"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:clickable="false"
			android:cursorVisible="false"
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:inputType="none" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<Spinner
			android:id="@+id/spinnerConcursos"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:entries="@array/cbxMegasenaQtdeDezenasJogo"
			android:prompt="@string/textPromptQtdeNumeroJogo" />

		<Button
			android:id="@+id/btGerarJogos"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="1dp"
			android:text="@string/btGerarJogos" />
	</LinearLayout>

	<TextView
		android:id="@+id/textJogosPossiveis"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/textJogosPossiveis"
		android:textStyle="bold" />

	<ListView
		android:id="@+id/lista_jogos_gerados"
		android:layout_width="match_parent"
		android:layout_height="0dip"
		android:layout_weight="1.12" >
	</ListView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom"
		android:orientation="vertical" >

		<Button
			android:id="@+id/btSalvarJogosTxt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="1dp"
			android:text="@string/btSalvarJogos" />
	</LinearLayout>

</LinearLayout>