<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_main"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ImageViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/header_main"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="40sp"/>
		
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:orientation="vertical"
	    android:gravity="center">

	    <ImageButton
		    android:id="@+id/btMenuMainMegasena"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:padding="2dip"
		    android:contentDescription="@string/megasena"
		    android:src="@drawable/menumain_megasena"
		    android:background="@color/branco"/>
			
		<ImageButton
		    android:id="@+id/btMenuMainQuina"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:padding="2dip"
		    android:contentDescription="@string/quina"
		    android:background="@color/branco"
		    android:src="@drawable/menumain_quina" />
		
		<ImageButton
		    android:id="@+id/btMenuMainLotofacil"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:padding="2dip"
		    android:contentDescription="@string/lotofacil"
			android:background="@color/branco"
		    android:src="@drawable/menumain_lotofacil" />
		
		<ImageButton
		    android:id="@+id/btMenuMainBtSair"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:padding="2dip"
		    android:contentDescription="@string/sair"
		    android:background="@color/branco"
		    android:src="@drawable/menumain_sair" />
		</LinearLayout>
		
</LinearLayout>		
