<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <ImageView
        android:id="@+id/ImageViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="10dp"/>
    	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="5dip"
	    android:layout_marginTop="30dp"
	    android:text="@string/textCarregarArquivo"
	    android:textSize="15sp"
	    android:textStyle="bold" />
	
	<LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" 
    	android:orientation="horizontal">

		<EditText
		    android:id="@+id/edtArquivoResultados"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:inputType="text" />

		<Button
		    android:id="@+id/btArquivo"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/btArquivo" />

	</LinearLayout>
	<Button
	    android:id="@+id/btProcessar"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btProcessar"/>

	<TextView
	    android:id="@+id/textMsgCarregarArquivo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:paddingLeft="5dip"
	    android:paddingTop="30dip"
	    android:textColor="@color/vermelho"
	    android:textSize="20sp"
	    android:textStyle="bold" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:textStyle="bold"
	    android:text="@string/textObs"
	    android:textSize="16sp" />

	<TextView
	    android:id="@+id/textInstrucoes"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:textSize="16sp" />

</LinearLayout>