<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ImageView
        android:id="@+id/ImageViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="10dp"/>
    
    
	<LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" 
    	android:layout_marginTop="20dp">
    	
		<Spinner
			android:id="@+id/spinnerConcursos"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:prompt="@string/textPromptQtdeNumeroJogo"
			android:entries="@array/cbxConcursosListar" />
		<Button
			android:id="@+id/btListar"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/btListar" />
	</LinearLayout>

    <ListView
        android:id="@+id/lista_dezenas_mais_sorteadas"
        android:layout_width="match_parent"
        android:layout_height="0dip"        
        android:layout_weight="1.97" >

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btGerarJogos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:text="@string/btGerarJogos" />
    </LinearLayout>

</LinearLayout>