<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/ImageViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="10dp"/>
    
    <ScrollView 
   		android:id="@+id/scrollView1"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content" >
		<LinearLayout 
			android:layout_height="wrap_content"
			android:layout_width="match_parent" 
			android:orientation="vertical"
			android:layout_marginTop="20dp">

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:padding="5dip"
		        android:text="@string/textConsultarResultado"
		        android:textSize="15sp"
		        android:textStyle="bold"/>
		
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
		
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:padding="5dip"
			        android:text="@string/textNumeroConcurso"
			        android:width="150dp" />
		
				<TextView
				    android:id="@+id/text2"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    
				    android:padding="5dip"
				    android:text="@string/textDataConcurso"
				    android:width="150dp" />
		
			</LinearLayout>    
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
		
			    <EditText
			        android:id="@+id/consultarNumeroConcurso"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:inputType="number"
			        android:padding="5dip"
			        android:width="150dip" />
			
				<EditText
				    android:id="@+id/consultarDataConcurso"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:inputType="date"
				    android:maxLength="10"
				    android:padding="5dip"
				    android:width="150dip" />
		
			</LinearLayout>
			
 		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
		
			    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:padding="5dip"
			        android:text="@string/textConsultaDezenas"
			        android:width="150dp" />
			</LinearLayout>     	
			
 		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
			    			        
 				<EditText
				    android:id="@+id/consultarDezenasConcurso"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:inputType="text"/> 			        
			 </LinearLayout>       
			 <Button
		        android:id="@+id/btConsultar"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:clickable="true"
		        android:padding="5dip"
		        android:text="@string/btConsultar" />
		</LinearLayout>
	</ScrollView>		    
			
	<ListView
	    android:id="@+id/lista_resultados"
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="6" >
    </ListView>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="bottom"
	    android:orientation="horizontal" >

	    <Button
	        android:id="@+id/btInserirResultado"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btInserir"
	        android:padding="1dip"/>
	    
    </LinearLayout>
    
</LinearLayout>