<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
   	android:id="@+id/LinearLayoutBackground"
   	android:layout_width="match_parent"
   	android:layout_height="wrap_content"
   	android:orientation="vertical">
    <ImageView
        android:id="@+id/ImageViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="10dp"/>
    

	<ScrollView 
   		android:id="@+id/scrollView1"
   		android:layout_width="match_parent"
   		android:layout_height="wrap_content" >
		<LinearLayout 
			android:layout_height="wrap_content"
			android:layout_width="match_parent" 
			android:orientation="vertical"
			android:layout_marginTop="20dp">
		    	
			<LinearLayout 
				android:layout_height="wrap_content"
				android:layout_width="match_parent" 
				android:orientation="horizontal">
				<TextView
					android:id="@+id/text1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/textNumeroConcurso"
					android:textSize="15sp"
					android:textStyle="bold"
					android:width="150dip" />
				<TextView
					android:id="@+id/text2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/textDataConcurso"
					android:textSize="15sp"
					android:textStyle="bold"
					android:width="150dip" />
			</LinearLayout>    
			<LinearLayout 
				android:layout_height="wrap_content"
				android:layout_width="match_parent" 
				android:orientation="horizontal">
			    <EditText
				    android:id="@+id/edtMegasenaNumeroConscurso"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content" 
				    android:inputType="number"
				    android:width="150sp"
				    android:layout_weight="1"/>
				<EditText
				    android:id="@+id/edtMegasenaDataConcurso"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:inputType="date"
				    android:maxLength="10"
				    android:width="150dip"
				    android:layout_weight="1"/>
			</LinearLayout>
			<LinearLayout 
				android:layout_height="wrap_content"
				android:layout_width="match_parent" 
				android:orientation="horizontal">
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:text="1ª dez."
				    android:textSize="15sp"
				    android:textStyle="bold"
				    
				     />
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:text="2ª dez." 
				    android:textSize="15sp"
				    android:textStyle="bold"
				    />
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:text="3ª dez."
				    android:textSize="15sp"
				    android:textStyle="bold"
				     />
			</LinearLayout>
			<LinearLayout 
				android:layout_height="wrap_content"
				android:layout_width="match_parent" 
				android:orientation="horizontal">
				<EditText
				    android:id="@+id/edtMegasenaD1"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" 
				    android:layout_weight="1"
				    android:inputType="number"
				    />
				<EditText
				    android:id="@+id/edtMegasenaD2"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" 
				    android:layout_weight="1"
				    android:inputType="number"
				    />
				<EditText
				    android:id="@+id/edtMegasenaD3"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" 
				    android:layout_weight="1"
				    android:inputType="number"
				    />
			</LinearLayout>			
			<LinearLayout 
				android:layout_height="wrap_content"
				android:layout_width="match_parent" 
				android:orientation="horizontal">
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:text="4ª dez."
				    android:textSize="15sp"
				    android:textStyle="bold"
				     />
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:text="5ª dez."
				    android:textSize="15sp"
				    android:textStyle="bold"
				     />
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:text="6ª dez."
				    android:textSize="15sp"
				    android:textStyle="bold"
				     />
			</LinearLayout>
			<LinearLayout 
				android:layout_height="wrap_content"
				android:layout_width="match_parent" 
				android:orientation="horizontal">
				<EditText
				    android:id="@+id/edtMegasenaD4"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" 
				    android:layout_weight="1"
				    android:inputType="number"
				    />
				<EditText
				    android:id="@+id/edtMegasenaD5"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" 
				    android:layout_weight="1"
				    android:inputType="number"
				    />
				<EditText
				    android:id="@+id/edtMegasenaD6"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content" 
				    android:layout_weight="1"
				    android:inputType="number"
				    />
			</LinearLayout>	
		
			<LinearLayout 
				    android:layout_width="fill_parent" 
				    android:orientation="horizontal"
					android:layout_height="wrap_content">
					<Button 
					    android:id="@+id/btExcluir" 
					    android:text="@string/btExcluir" 
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
						android:layout_weight="1" />
				    <Button 
				        android:id="@+id/btCancelar" 
				        android:text="@string/btCancelar" 
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content" 
						android:layout_weight="1"/>
					<Button 
					    android:id="@+id/btSalvar" 
					    android:text="@string/btSalvar" 
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content" 
						android:layout_weight="1"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>		
</LinearLayout>

	